src/test/run-pass/structs-enums/uninstantiable-struct.rs
// run-pass
pub struct Z(&'static Z);

pub fn main() {}
