src/test/compile-fail/unnecessary-unsafe.rs
// xfail-stage0
// error-pattern: calculated effect is ''
unsafe fn main() {
  log "hi";
}